Add --enable-native-access=ALL-UNNAMED that will be required for JNA and junixsocket to function in future Java releases.